<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_mobile_robot_sensor_launch</name>
  <version>0.0.0</version>
  <description>sample_mobile_robot_sensor_launch package</description>
  <maintainer email="azumi.suzuki@tier4.jp">azumi-suzuki</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>dummy_diag_publisher</exec_depend>
  <exec_depend>imu_corrector</exec_depend>
  <exec_depend>pointcloud_preprocessor</exec_depend>
  <exec_depend>ros2_socketcan</exec_depend>
  <exec_depend>tamagawa_imu_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
